--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@lottiefiles/dotlottie-react": "^0.13.2",
+    "@lottiefiles/react-lottie-player": "^3.6.0",
     "@mui/material": "^5.15.17",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.6",
