feat: trying to get utf8

--- a/nginx.conf
+++ b/nginx.conf
@@ -8,6 +8,7 @@ server {
   # React Router SPA fallback
   location / {
     try_files $uri /index.html;
+    add_header Content-Type "text/html; charset=utf-8";
   }
 
   location /assets/ {
